deploy: 0921340faafa606f62045b3bdeea767b241ad0f4

--- a/tutorials/c_plotting.ipynb
+++ b/tutorials/c_plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d9af23b0",
+   "id": "eba1d965",
    "metadata": {},
    "source": [
     "# Plotting\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "441b7577",
+   "id": "0a3b83ce",
    "metadata": {},
    "source": [
     "1. geometry\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c92524ea",
+   "id": "4621333a",
    "metadata": {},
    "source": [
     "All public plotting functions are associated with a list of orbitals."
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42703b8f",
+   "id": "9aa56a17",
    "metadata": {},
    "source": [
     "## Geometry\n",
@@ -43,13 +43,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3747d903",
+   "id": "afa23114",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:42:56.461311Z",
-     "iopub.status.busy": "2025-01-22T11:42:56.460868Z",
-     "iopub.status.idle": "2025-01-22T11:43:01.225200Z",
-     "shell.execute_reply": "2025-01-22T11:43:01.224547Z"
+     "iopub.execute_input": "2025-01-22T11:44:55.888746Z",
+     "iopub.status.busy": "2025-01-22T11:44:55.888569Z",
+     "iopub.status.idle": "2025-01-22T11:45:00.674218Z",
+     "shell.execute_reply": "2025-01-22T11:45:00.673611Z"
     }
    },
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce850c62",
+   "id": "fa8fa5d1",
    "metadata": {},
    "source": [
     "If we have a stack"
@@ -82,13 +82,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "241ed451",
+   "id": "8744322e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:43:01.227316Z",
-     "iopub.status.busy": "2025-01-22T11:43:01.226931Z",
-     "iopub.status.idle": "2025-01-22T11:43:01.541820Z",
-     "shell.execute_reply": "2025-01-22T11:43:01.541288Z"
+     "iopub.execute_input": "2025-01-22T11:45:00.676130Z",
+     "iopub.status.busy": "2025-01-22T11:45:00.675874Z",
+     "iopub.status.idle": "2025-01-22T11:45:00.982463Z",
+     "shell.execute_reply": "2025-01-22T11:45:00.980661Z"
     }
    },
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99411e18",
+   "id": "8e8c3692",
    "metadata": {},
    "source": [
     "## Simulation output"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc1f11bd",
+   "id": "17629e08",
    "metadata": {},
    "source": [
     "There is a dedicated function for showing time-domain simulation results. Let's illustrate this by tracking the current considering the previously defined flake under x-polarized Gaussian pulsed illumination, which in GRANAD's units is equivalent to the velocity operator given by the commutator of the system hamiltonian $H$ and the polarization operator $P$"
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29722737",
+   "id": "f6cf342c",
    "metadata": {},
    "source": [
     "$$\\bf{v} = \\frac{-i}{\\hbar} [H, \\bf{P}]$$"
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c54eb4a5",
+   "id": "48875cbc",
    "metadata": {},
    "source": [
     "The time-dependent induced current (density) is given by the expectation value of the current density operator $j$, which is related to the velocity operator as $j = ev$. In GRANAD's units, setting the elementary charge $e = 1$, the velocity operator is thus identical to the current density operator, with which we can immediately evalute the induced currents due to the external field."
@@ -145,13 +145,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9a74712e",
+   "id": "0c5cf1f6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:43:01.544680Z",
-     "iopub.status.busy": "2025-01-22T11:43:01.544389Z",
-     "iopub.status.idle": "2025-01-22T11:43:06.568365Z",
-     "shell.execute_reply": "2025-01-22T11:43:06.567813Z"
+     "iopub.execute_input": "2025-01-22T11:45:00.985169Z",
+     "iopub.status.busy": "2025-01-22T11:45:00.984938Z",
+     "iopub.status.idle": "2025-01-22T11:45:05.965782Z",
+     "shell.execute_reply": "2025-01-22T11:45:05.965264Z"
     }
    },
    "outputs": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "510f45e1",
+   "id": "6083a078",
    "metadata": {},
    "source": [
     "A detailed description of parameters to the Gaussian pulse is given in the electric fields tutorial."
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0b40745",
+   "id": "e702817f",
    "metadata": {},
    "source": [
     "We can also Fourier transform the result to obtain the frequency domain result by specifying the omega limits"
@@ -222,13 +222,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "05e75ac4",
+   "id": "2155eab8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:43:06.570266Z",
-     "iopub.status.busy": "2025-01-22T11:43:06.569925Z",
-     "iopub.status.idle": "2025-01-22T11:43:07.139021Z",
-     "shell.execute_reply": "2025-01-22T11:43:07.138383Z"
+     "iopub.execute_input": "2025-01-22T11:45:05.967682Z",
+     "iopub.status.busy": "2025-01-22T11:45:05.967493Z",
+     "iopub.status.idle": "2025-01-22T11:45:06.476563Z",
+     "shell.execute_reply": "2025-01-22T11:45:06.475863Z"
     }
    },
    "outputs": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0930e3c6",
+   "id": "d24d241c",
    "metadata": {},
    "source": [
     "Note that the sparsity of the spectral grid ows to the sparse sampling in time domain which we have chosen for demonstrational purposes. A real simulation requires more careful refinement of the temporal grid. A finer temporal grid or longer integration time generally results in higher quality spectra."
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5494cb4c",
+   "id": "c63850fb",
    "metadata": {},
    "source": [
     "## Space-dependent arrays"
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99f6bf54",
+   "id": "8732c2cb",
    "metadata": {},
    "source": [
     "The functions show_2d and show_3d are a bit more versatile than initially indicated."
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f969da7",
+   "id": "98c9860d",
    "metadata": {},
    "source": [
     "If we supply a \"display\" argument, we can plot an arbitrary array on the grid spanned by the orbitals and filter it by orbital tags. Let's demonstrate this by visualizing the lowest energy single-particle state of the flake"
@@ -282,13 +282,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c2ab9793",
+   "id": "8fc8bce2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:43:07.141045Z",
-     "iopub.status.busy": "2025-01-22T11:43:07.140846Z",
-     "iopub.status.idle": "2025-01-22T11:43:07.599201Z",
-     "shell.execute_reply": "2025-01-22T11:43:07.598604Z"
+     "iopub.execute_input": "2025-01-22T11:45:06.478553Z",
+     "iopub.status.busy": "2025-01-22T11:45:06.478364Z",
+     "iopub.status.idle": "2025-01-22T11:45:06.922610Z",
+     "shell.execute_reply": "2025-01-22T11:45:06.922061Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18b5e817",
+   "id": "145d984a",
    "metadata": {},
    "source": [
     "If you want a normalized plot of the absolute values, do"
@@ -318,13 +318,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "93119af2",
+   "id": "ec34e713",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:43:07.601114Z",
-     "iopub.status.busy": "2025-01-22T11:43:07.600862Z",
-     "iopub.status.idle": "2025-01-22T11:43:08.097279Z",
-     "shell.execute_reply": "2025-01-22T11:43:08.096597Z"
+     "iopub.execute_input": "2025-01-22T11:45:06.924638Z",
+     "iopub.status.busy": "2025-01-22T11:45:06.924309Z",
+     "iopub.status.idle": "2025-01-22T11:45:07.383536Z",
+     "shell.execute_reply": "2025-01-22T11:45:07.382939Z"
     }
    },
    "outputs": [
@@ -345,32 +345,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bce97dde",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "6dc23171",
+   "metadata": {},
    "source": [
     "Additionally, if you supply the keyword argument name = \"MY-PLOT-NAME.pdf\" to any plotting function, the plot will not be displayed, but instead saved to disk in the directory you invoked Python."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dd47e223",
+   "id": "e2066ce4",
    "metadata": {},
    "source": [
-    "There exists a convenience function to compute and visualize the induced field at an arbitrary time step. To this end, we run a full simulation"
+    "There exists a convenience function to compute and visualize the induced field at an arbitrary time step. \n",
+    "To achieve this, we first run a full simulation of the system using the `flake.master_equation` function\n",
+    "and extract the density matrix at the last time step."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "506c4f76",
+   "id": "d54c394d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:43:08.099105Z",
-     "iopub.status.busy": "2025-01-22T11:43:08.098919Z",
-     "iopub.status.idle": "2025-01-22T11:43:09.438796Z",
-     "shell.execute_reply": "2025-01-22T11:43:09.438240Z"
+     "iopub.execute_input": "2025-01-22T11:45:07.385529Z",
+     "iopub.status.busy": "2025-01-22T11:45:07.385118Z",
+     "iopub.status.idle": "2025-01-22T11:45:08.695212Z",
+     "shell.execute_reply": "2025-01-22T11:45:08.694594Z"
     }
    },
    "outputs": [
@@ -402,51 +402,60 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56a35601",
+   "id": "9374a334",
    "metadata": {},
    "source": [
-    "Then, we define the extent of a 2D grid"
+    "Next, we define the extent of a 2D grid. This grid represents the spatial domain where the induced field \n",
+    "will be evaluated. The grid points are created to encompass the range of particle positions in the x and y \n",
+    "dimensions, extended slightly to include a buffer region."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5fb3f0d7",
+   "id": "26be26ca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:43:09.440811Z",
-     "iopub.status.busy": "2025-01-22T11:43:09.440430Z",
-     "iopub.status.idle": "2025-01-22T11:43:09.522350Z",
-     "shell.execute_reply": "2025-01-22T11:43:09.521665Z"
+     "iopub.execute_input": "2025-01-22T11:45:08.697315Z",
+     "iopub.status.busy": "2025-01-22T11:45:08.696866Z",
+     "iopub.status.idle": "2025-01-22T11:45:08.777466Z",
+     "shell.execute_reply": "2025-01-22T11:45:08.776825Z"
     }
    },
    "outputs": [],
    "source": [
     "import jax.numpy as jnp\n",
-    "xmin, xmax = flake.positions[:, 0].min(), flake.positions[:, 0].max()\n",
-    "x_grid = jnp.linspace(xmin - 1, xmax + 1, 40)\n",
-    "ymin, ymax = flake.positions[:, 1].min(), flake.positions[:, 1].max()\n",
-    "y_grid = jnp.linspace(ymin - 1, ymax + 1, 40)"
+    "xmin, xmax = flake.positions[:, 0].min(), flake.positions[:, 0].max()  # Compute the minimum and maximum x-coordinates \n",
+    "                                                                       # of the particle positions.\n",
+    "x_grid = jnp.linspace(xmin - 1, xmax + 1, 40)  # Create a 1D array of 40 evenly spaced points in the x-direction, \n",
+    "                                               # extending slightly beyond the range of the particles.\n",
+    "\n",
+    "ymin, ymax = flake.positions[:, 1].min(), flake.positions[:, 1].max()  # Compute the minimum and maximum y-coordinates \n",
+    "                                                                       # of the particle positions.\n",
+    "y_grid = jnp.linspace(ymin - 1, ymax + 1, 40)  # Create a 1D array of 40 evenly spaced points in the y-direction, \n",
+    "                                               # extending slightly beyond the range of the particles."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8b1e81d5",
+   "id": "7933eb49",
    "metadata": {},
    "source": [
-    "Then, we plot the field"
+    "Finally, we use the `show_induced_field` function to compute and visualize the induced field on the \n",
+    "defined 2D grid. This function calculates the field based on the density matrix, evaluates it on the grid, \n",
+    "and plots the normalized logarithmic magnitude of the induced field."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "477faf87",
+   "id": "488ab6f9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:43:09.524753Z",
-     "iopub.status.busy": "2025-01-22T11:43:09.524376Z",
-     "iopub.status.idle": "2025-01-22T11:43:10.669807Z",
-     "shell.execute_reply": "2025-01-22T11:43:10.669260Z"
+     "iopub.execute_input": "2025-01-22T11:45:08.779590Z",
+     "iopub.status.busy": "2025-01-22T11:45:08.779399Z",
+     "iopub.status.idle": "2025-01-22T11:45:09.874645Z",
+     "shell.execute_reply": "2025-01-22T11:45:09.874069Z"
     }
    },
    "outputs": [
@@ -462,7 +471,16 @@
     }
    ],
    "source": [
-    "flake.show_induced_field(x = x_grid, y = y_grid, component = 0, z = jnp.array([0]), density_matrix = density_matrix[-1])"
+    "flake.show_induced_field(\n",
+    "    x = x_grid,              # The x-coordinates of the grid points where the field will be evaluated.\n",
+    "    y = y_grid,              # The y-coordinates of the grid points where the field will be evaluated.\n",
+    "    component = 0,           # Specifies which component (direction) of the field to visualize. \n",
+    "                             # Here, the x-component (0) is selected.\n",
+    "    z = jnp.array([0]),      # The z-coordinate of the plane in which the field is evaluated. \n",
+    "                             # Here, it is set to 0 to visualize the field in the xy-plane.\n",
+    "    density_matrix = density_matrix[-1]  # The final density matrix from the simulation is passed as an argument, \n",
+    "                                         # ensuring that the field reflects the system's state at the final time step.\n",
+    ")"
    ]
   }
  ],
