--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "12bfbfb9",
+   "id": "974145b1",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac2aa972",
+   "id": "89d481f7",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13c77950",
+   "id": "94b1f0b2",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a639250c",
+   "id": "0118dffb",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2ce7e2a",
+   "id": "224508b0",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "600f146b",
+   "id": "50eed29e",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5b75cfc0",
+   "id": "b5c8988d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:42:23.277545Z",
-     "iopub.status.busy": "2025-01-22T11:42:23.277338Z",
-     "iopub.status.idle": "2025-01-22T11:42:27.707345Z",
-     "shell.execute_reply": "2025-01-22T11:42:27.706675Z"
+     "iopub.execute_input": "2025-01-22T11:44:23.189685Z",
+     "iopub.status.busy": "2025-01-22T11:44:23.189507Z",
+     "iopub.status.idle": "2025-01-22T11:44:27.475981Z",
+     "shell.execute_reply": "2025-01-22T11:44:27.475408Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "955f0b59",
+   "id": "57091965",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "981877a5",
+   "id": "0ee96c6b",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c3f8a9e",
+   "id": "cb097cbb",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11f5c913",
+   "id": "28a43304",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8041294",
+   "id": "2e76e613",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "700cf3f4",
+   "id": "21d06d2c",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "484055cb",
+   "id": "ba91883b",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c150b94",
+   "id": "1f619525",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "868d3b0f",
+   "id": "76b03aa8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:42:27.709851Z",
-     "iopub.status.busy": "2025-01-22T11:42:27.709298Z",
-     "iopub.status.idle": "2025-01-22T11:42:29.736219Z",
-     "shell.execute_reply": "2025-01-22T11:42:29.735687Z"
+     "iopub.execute_input": "2025-01-22T11:44:27.478381Z",
+     "iopub.status.busy": "2025-01-22T11:44:27.477908Z",
+     "iopub.status.idle": "2025-01-22T11:44:29.423129Z",
+     "shell.execute_reply": "2025-01-22T11:44:29.422519Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8602dde",
+   "id": "bc99f986",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1fdac76a",
+   "id": "b593fd7f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:42:29.738344Z",
-     "iopub.status.busy": "2025-01-22T11:42:29.737880Z",
-     "iopub.status.idle": "2025-01-22T11:42:29.741492Z",
-     "shell.execute_reply": "2025-01-22T11:42:29.740866Z"
+     "iopub.execute_input": "2025-01-22T11:44:29.425049Z",
+     "iopub.status.busy": "2025-01-22T11:44:29.424692Z",
+     "iopub.status.idle": "2025-01-22T11:44:29.428120Z",
+     "shell.execute_reply": "2025-01-22T11:44:29.427555Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1655551a",
+   "id": "19c2c4f1",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a030fa59",
+   "id": "2bf94b15",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f4eb210",
+   "id": "df508d4d",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fef904f",
+   "id": "579a2bdc",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1e838137",
+   "id": "565bc141",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:42:29.743375Z",
-     "iopub.status.busy": "2025-01-22T11:42:29.743201Z",
-     "iopub.status.idle": "2025-01-22T11:42:29.789090Z",
-     "shell.execute_reply": "2025-01-22T11:42:29.788418Z"
+     "iopub.execute_input": "2025-01-22T11:44:29.430091Z",
+     "iopub.status.busy": "2025-01-22T11:44:29.429748Z",
+     "iopub.status.idle": "2025-01-22T11:44:29.472556Z",
+     "shell.execute_reply": "2025-01-22T11:44:29.472023Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e105b0de",
+   "id": "08b643d6",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bc159fba",
+   "id": "e5b9b03c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:42:29.791177Z",
-     "iopub.status.busy": "2025-01-22T11:42:29.790724Z",
-     "iopub.status.idle": "2025-01-22T11:42:29.862394Z",
-     "shell.execute_reply": "2025-01-22T11:42:29.861878Z"
+     "iopub.execute_input": "2025-01-22T11:44:29.474522Z",
+     "iopub.status.busy": "2025-01-22T11:44:29.474191Z",
+     "iopub.status.idle": "2025-01-22T11:44:29.539653Z",
+     "shell.execute_reply": "2025-01-22T11:44:29.539066Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e3793ee",
+   "id": "9fd2bc5b",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bf03c11",
+   "id": "82f9cb74",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4b492fdd",
+   "id": "b32d1d5f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:42:29.864334Z",
-     "iopub.status.busy": "2025-01-22T11:42:29.863988Z",
-     "iopub.status.idle": "2025-01-22T11:42:29.896609Z",
-     "shell.execute_reply": "2025-01-22T11:42:29.895991Z"
+     "iopub.execute_input": "2025-01-22T11:44:29.541645Z",
+     "iopub.status.busy": "2025-01-22T11:44:29.541227Z",
+     "iopub.status.idle": "2025-01-22T11:44:29.570088Z",
+     "shell.execute_reply": "2025-01-22T11:44:29.569514Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "208f618d",
+   "id": "9dfa4822",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a34b1e1f",
+   "id": "c3fcaffb",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b78e55a",
+   "id": "b4a78384",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cd6c353",
+   "id": "30bd85b5",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8c4325d",
+   "id": "7789f108",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "205f275a",
+   "id": "05d4e101",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:42:29.898810Z",
-     "iopub.status.busy": "2025-01-22T11:42:29.898377Z",
-     "iopub.status.idle": "2025-01-22T11:42:29.902851Z",
-     "shell.execute_reply": "2025-01-22T11:42:29.902171Z"
+     "iopub.execute_input": "2025-01-22T11:44:29.572257Z",
+     "iopub.status.busy": "2025-01-22T11:44:29.571897Z",
+     "iopub.status.idle": "2025-01-22T11:44:29.576015Z",
+     "shell.execute_reply": "2025-01-22T11:44:29.575362Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5db8a305",
+   "id": "c8117efa",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "70e64889",
+   "id": "5168b2c6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:42:29.904637Z",
-     "iopub.status.busy": "2025-01-22T11:42:29.904324Z",
-     "iopub.status.idle": "2025-01-22T11:42:29.907359Z",
-     "shell.execute_reply": "2025-01-22T11:42:29.906799Z"
+     "iopub.execute_input": "2025-01-22T11:44:29.577834Z",
+     "iopub.status.busy": "2025-01-22T11:44:29.577491Z",
+     "iopub.status.idle": "2025-01-22T11:44:29.580562Z",
+     "shell.execute_reply": "2025-01-22T11:44:29.579907Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42b45da7",
+   "id": "0be221e5",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4143eafe",
+   "id": "f28b9923",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:42:29.909087Z",
-     "iopub.status.busy": "2025-01-22T11:42:29.908903Z",
-     "iopub.status.idle": "2025-01-22T11:42:32.494186Z",
-     "shell.execute_reply": "2025-01-22T11:42:32.493547Z"
+     "iopub.execute_input": "2025-01-22T11:44:29.582251Z",
+     "iopub.status.busy": "2025-01-22T11:44:29.581927Z",
+     "iopub.status.idle": "2025-01-22T11:44:32.170549Z",
+     "shell.execute_reply": "2025-01-22T11:44:32.169979Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfae086b",
+   "id": "76882e41",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fab27c21",
+   "id": "be8a0a30",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37c5efcd",
+   "id": "49346dcb",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "583c65e9",
+   "id": "42a38867",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f70da1b9",
+   "id": "b151f646",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:42:32.496297Z",
-     "iopub.status.busy": "2025-01-22T11:42:32.495916Z",
-     "iopub.status.idle": "2025-01-22T11:42:32.499968Z",
-     "shell.execute_reply": "2025-01-22T11:42:32.499235Z"
+     "iopub.execute_input": "2025-01-22T11:44:32.172731Z",
+     "iopub.status.busy": "2025-01-22T11:44:32.172360Z",
+     "iopub.status.idle": "2025-01-22T11:44:32.176106Z",
+     "shell.execute_reply": "2025-01-22T11:44:32.175605Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f4f8a0ab380>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fdd18bbb380>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91b1ebe6",
+   "id": "cb9bf9fd",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "428700d6",
+   "id": "0773ed58",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb1065a8",
+   "id": "f78cc1ca",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc1f8a99",
+   "id": "5f9a0384",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4c143dfc",
+   "id": "71ea50ae",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:42:32.501877Z",
-     "iopub.status.busy": "2025-01-22T11:42:32.501567Z",
-     "iopub.status.idle": "2025-01-22T11:42:32.504292Z",
-     "shell.execute_reply": "2025-01-22T11:42:32.503805Z"
+     "iopub.execute_input": "2025-01-22T11:44:32.177929Z",
+     "iopub.status.busy": "2025-01-22T11:44:32.177588Z",
+     "iopub.status.idle": "2025-01-22T11:44:32.180582Z",
+     "shell.execute_reply": "2025-01-22T11:44:32.180026Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a7f6205a",
+   "id": "b0c07d5a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:42:32.506464Z",
-     "iopub.status.busy": "2025-01-22T11:42:32.505839Z",
-     "iopub.status.idle": "2025-01-22T11:42:33.578040Z",
-     "shell.execute_reply": "2025-01-22T11:42:33.577531Z"
+     "iopub.execute_input": "2025-01-22T11:44:32.182391Z",
+     "iopub.status.busy": "2025-01-22T11:44:32.182063Z",
+     "iopub.status.idle": "2025-01-22T11:44:33.243428Z",
+     "shell.execute_reply": "2025-01-22T11:44:33.242871Z"
     }
    },
    "outputs": [
